    - Flowermenu is back to being a list
    - PvP avatars should now show in top right if they weren't before for you.
    - party icons on loftar map should be right icons now.
    - Quest pointer icon should be fixed now to not disappear or show wrong direction, i believe. You can also click the
    icon to go to it (up to 1000 tiles at a time) or interact with it (right click menu) if in view distance.
    - Logout fixes, Cavein dust back to 30m + colorful
    - Now wolverine, adders, and beavers should show their circle
    - Added back the land manager 'm' -> 'l', still has some work to be done on it tho
    - Added back the base for themes, may notice some window changes
    - Can now mouse over avatars to see their equipment. Friends list avatar is now full size too.
    - Buffs now show % on the middle of them
    - Added in marking for party members, alt right click -> Mark for party
    - Added in Highlighting to find things easier. alt right click -> Highlight or open Highlight manager 'm' -> 'g' and
    manually add in the res name
    - All of the managers should now sort their lists alphabetically
    - Fixed crash bug if you clicked in very specific areas of a window to move it
    - Changed how the list of combat opponents looks, your current target has its boxed highlighted in yellow now
    - Logging back into combat won't screw up keybinds now
    - Can switch between targets with scroll wheel
    - You won't click through the menugrid now if you miss a button
    - Crafting window now has a search built into it for crafting items only. Can toggle crafting window with 'm' -> 'r'
    - Show Animations now properly stops animations like beehives, flies, etc. Human animations still display...
    - Closing the crafting window closes the current craft item
    - Overall AC is now displayed in bottom left of equip screen
2/16/19
    - Softcap added in crafting window
    - Updated Calendar to be somewhat better